# fantastic-deploy-o-tron

./: README.md  pyproject.toml  xx.py
deployer/: settings.py
deployer/handler/: azure.py
